--- a/package.json
+++ b/package.json
@@ -10,54 +10,55 @@
 		"format": "prettier -w --cache ."
 	},
 	"devDependencies": {
-		"@pagefind/default-ui": "^1.0.3",
-		"@resvg/resvg-js": "^2.4.1",
+		"@pagefind/default-ui": "^1.1.0",
+		"@resvg/resvg-js": "^2.6.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.8",
-		"@types/eslint": "^8.44.2",
-		"@typescript-eslint/eslint-plugin": "^6.5.0",
-		"@typescript-eslint/parser": "^6.5.0",
+		"@tailwindcss/typography": "^0.5.12",
+		"@types/eslint": "^8.56.9",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
 		"astro-eslint-parser": "^0.15.0",
-		"autoprefixer": "^10.4.15",
-		"eslint": "^8.48.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-import-resolver-typescript": "^3.6.0",
-		"eslint-plugin-astro": "^0.29.0",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-prettier": "^5.0.0",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-astro": "^0.29.1",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"eslint-plugin-prettier": "^5.1.3",
 		"mdast-util-to-string": "^4.0.0",
 		"pagefind": "^0.12.0",
-		"postcss": "^8.4.29",
-		"postcss-html": "^1.5.0",
+		"postcss": "^8.4.38",
+		"postcss-html": "^1.6.0",
 		"postcss-import": "^15.1.0",
-		"prettier": "^3.0.3",
+		"prettier": "^3.2.5",
 		"prettier-plugin-astro": "0.12.0",
-		"prettier-plugin-tailwindcss": "^0.5.4",
+		"prettier-plugin-tailwindcss": "^0.5.13",
 		"reading-time": "^1.5.0",
 		"remark-unwrap-images": "^3.0.1",
-		"tailwindcss": "^3.3.3",
-		"typescript": "^5.2.2"
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.4.5"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^1.0.0",
-		"@astrojs/prefetch": "^0.4.0",
+		"@astrojs/mdx": "^1.1.5",
+		"@astrojs/prefetch": "^0.4.1",
 		"@astrojs/rss": "^3.0.0",
-		"@astrojs/sitemap": "^3.0.0",
-		"@astrojs/tailwind": "^5.0.0",
-		"@astrojs/vercel": "^5.0.1",
-		"@fontsource-variable/inter": "^5.0.8",
-		"@fontsource-variable/jetbrains-mono": "^5.0.13",
-		"@fontsource/inter": "^5.0.8",
-		"astro": "^3.1.0",
+		"@astrojs/sitemap": "^3.1.2",
+		"@astrojs/tailwind": "^5.1.0",
+		"@astrojs/vercel": "^5.2.0",
+		"@fontsource-variable/inter": "^5.0.17",
+		"@fontsource-variable/jetbrains-mono": "^5.0.20",
+		"@fontsource/inter": "^5.0.17",
+		"astro": "^3.6.5",
 		"astro-analytics": "^2.7.0",
 		"astro-embed": "^0.5.1",
-		"astro-icon": "^0.8.1",
+		"astro-icon": "^0.8.2",
+		"astro-tweet": "^0.0.3",
 		"rehype-external-links": "^3.0.0",
-		"rehype-shikiji": "^0.6.8",
+		"rehype-shikiji": "^0.6.13",
 		"satori": "0.10.4",
 		"satori-html": "^0.3.2",
-		"sharp": "^0.32.5"
+		"sharp": "^0.32.6"
 	},
 	"packageManager": "pnpm@8.6.1"
 }
