--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
 	"devDependencies": {
 		"@pagefind/default-ui": "^1.1.0",
 		"@resvg/resvg-js": "^2.6.2",
+		"@shikijs/transformers": "^1.9.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.12",
-		"@types/eslint": "^8.56.9",
+		"@tailwindcss/typography": "^0.5.13",
+		"@types/eslint": "^8.56.10",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"astro-eslint-parser": "^0.15.0",
@@ -24,38 +25,36 @@
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-astro": "^0.29.1",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"eslint-plugin-jsx-a11y": "^6.9.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"mdast-util-to-string": "^4.0.0",
 		"pagefind": "^0.12.0",
 		"postcss": "^8.4.38",
-		"postcss-html": "^1.6.0",
+		"postcss-html": "^1.7.0",
 		"postcss-import": "^15.1.0",
-		"prettier": "^3.2.5",
+		"prettier": "^3.3.2",
 		"prettier-plugin-astro": "0.12.0",
-		"prettier-plugin-tailwindcss": "^0.5.13",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"reading-time": "^1.5.0",
 		"remark-unwrap-images": "^3.0.1",
-		"tailwindcss": "^3.4.3",
-		"typescript": "^5.4.5"
+		"tailwindcss": "^3.4.4",
+		"typescript": "^5.5.2"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^1.1.5",
-		"@astrojs/prefetch": "^0.4.1",
-		"@astrojs/rss": "^3.0.0",
-		"@astrojs/sitemap": "^3.1.2",
+		"@astrojs/mdx": "^3.1.2",
+		"@astrojs/rss": "^4.0.7",
+		"@astrojs/sitemap": "^3.1.6",
 		"@astrojs/tailwind": "^5.1.0",
-		"@astrojs/vercel": "^5.2.0",
-		"@fontsource-variable/inter": "^5.0.17",
-		"@fontsource-variable/jetbrains-mono": "^5.0.20",
-		"@fontsource/inter": "^5.0.17",
-		"astro": "^3.6.5",
-		"astro-analytics": "^2.7.0",
+		"@astrojs/vercel": "^7.7.2",
+		"@fontsource-variable/inter": "^5.0.18",
+		"@fontsource-variable/jetbrains-mono": "^5.0.21",
+		"@fontsource/inter": "^5.0.18",
+		"@motion-canvas/player": "^3.16.0",
+		"astro": "^4.11.1",
 		"astro-embed": "^0.5.1",
 		"astro-icon": "^0.8.2",
 		"astro-tweet": "^0.0.3",
 		"rehype-external-links": "^3.0.0",
-		"rehype-shikiji": "^0.6.13",
 		"satori": "0.10.4",
 		"satori-html": "^0.3.2",
 		"sharp": "^0.32.6"
