--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"typescript": "^5.5.2"
 	},
 	"dependencies": {
+		"@astrojs/markdown-remark": "^5.1.1",
 		"@astrojs/mdx": "^3.1.2",
 		"@astrojs/rss": "^4.0.7",
 		"@astrojs/sitemap": "^3.1.6",
@@ -54,6 +55,9 @@
 		"astro-embed": "^0.5.1",
 		"astro-icon": "^0.8.2",
 		"astro-tweet": "^0.0.3",
+		"hast-util-to-string": "^3.0.0",
+		"hastscript": "^9.0.0",
+		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
 		"satori": "0.10.4",
 		"satori-html": "^0.3.2",
