--- a/package.json
+++ b/package.json
@@ -10,55 +10,58 @@
 		"format": "prettier -w --cache ."
 	},
 	"devDependencies": {
-		"@pagefind/default-ui": "^1.1.0",
+		"@pagefind/default-ui": "^1.1.1",
 		"@resvg/resvg-js": "^2.6.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.13",
-		"@types/eslint": "^8.56.10",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/eslint": "^8.56.12",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"astro-eslint-parser": "^0.15.0",
-		"autoprefixer": "^10.4.19",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-import-resolver-typescript": "^3.6.3",
 		"eslint-plugin-astro": "^0.29.1",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jsx-a11y": "^6.9.0",
-		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-import": "^2.30.0",
+		"eslint-plugin-jsx-a11y": "^6.10.0",
+		"eslint-plugin-prettier": "^5.2.1",
 		"mdast-util-to-string": "^4.0.0",
 		"pagefind": "^0.12.0",
-		"postcss": "^8.4.38",
+		"postcss": "^8.4.45",
 		"postcss-html": "^1.7.0",
 		"postcss-import": "^15.1.0",
-		"prettier": "^3.3.2",
+		"prettier": "^3.3.3",
 		"prettier-plugin-astro": "0.12.0",
 		"prettier-plugin-tailwindcss": "^0.5.14",
 		"reading-time": "^1.5.0",
 		"remark-unwrap-images": "^3.0.1",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.5.2"
+		"tailwindcss": "^3.4.10",
+		"typescript": "^5.5.4"
 	},
 	"dependencies": {
-		"@astrojs/markdown-remark": "^5.1.1",
-		"@astrojs/mdx": "^3.1.2",
+		"@astrojs/markdown-remark": "^5.2.0",
+		"@astrojs/mdx": "^3.1.5",
 		"@astrojs/rss": "^4.0.7",
 		"@astrojs/sitemap": "^3.1.6",
 		"@astrojs/tailwind": "^5.1.0",
-		"@astrojs/vercel": "^7.7.2",
-		"@fontsource-variable/inter": "^5.0.18",
-		"@fontsource-variable/jetbrains-mono": "^5.0.21",
-		"@fontsource/inter": "^5.0.18",
-		"@motion-canvas/player": "^3.16.0",
-		"astro": "^4.11.1",
+		"@astrojs/vercel": "^7.8.0",
+		"@fontsource-variable/inter": "^5.0.20",
+		"@fontsource-variable/jetbrains-mono": "^5.0.22",
+		"@fontsource/inter": "^5.0.20",
+		"@microflash/remark-callout-directives": "^4.3.1",
+		"@motion-canvas/player": "^3.17.0",
+		"astro": "^4.15.3",
 		"astro-embed": "^0.5.1",
-		"astro-expressive-code": "^0.35.3",
+		"astro-expressive-code": "^0.35.6",
 		"astro-icon": "^0.8.2",
 		"astro-tweet": "^0.0.3",
 		"hast-util-to-string": "^3.0.0",
 		"hastscript": "^9.0.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
+		"remark-directive": "^3.0.0",
+		"remark-parse": "^11.0.0",
 		"satori": "0.10.4",
 		"satori-html": "^0.3.2",
 		"sharp": "^0.32.6",
