--- a/package.json
+++ b/package.json
@@ -56,8 +56,11 @@
 		"astro-expressive-code": "^0.35.6",
 		"astro-icon": "^0.8.2",
 		"astro-tweet": "^0.0.3",
+		"classnames": "^2.5.1",
+		"framer-motion": "^12.18.1",
 		"hast-util-to-string": "^3.0.0",
 		"hastscript": "^9.0.0",
+		"motion": "^12.18.1",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
 		"remark-directive": "^3.0.0",
