seo: rewrite / to /posts in vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-	"redirects": [
+	"rewrites": [
 		{
 			"source": "/",
-			"destination": "https://blog.shrirambalaji.com/posts",
-			"statusCode": 308
+			"destination": "/posts"
 		}
 	]
 }
