--- a/package.json
+++ b/package.json
@@ -71,5 +71,36 @@
 		"sharp": "^0.32.6",
 		"unist-util-visit": "^5.0.0"
 	},
-	"packageManager": "pnpm@8.6.1"
+	"packageManager": "pnpm@8.6.1",
+	"pnpm": {
+		"overrides": {
+			"dset@<3.1.4": ">=3.1.4",
+			"vite@>=5.4.0 <5.4.6": ">=5.4.6",
+			"vite@>=5.4.0 <=5.4.5": ">=5.4.6",
+			"rollup@>=4.0.0 <4.22.4": ">=4.22.4",
+			"astro@>=3.0.0 <=4.16.0": ">=4.16.1",
+			"nanoid@<3.3.8": ">=3.3.8",
+			"astro@<4.16.17": ">=4.16.17",
+			"astro@<=4.16.17": ">=4.16.18",
+			"path-to-regexp@>=4.0.0 <6.3.0": ">=6.3.0",
+			"esbuild@<=0.24.2": ">=0.25.0",
+			"vite@>=5.0.0 <=5.4.11": ">=5.4.12",
+			"vite@>=5.0.0 <5.4.15": ">=5.4.15",
+			"vite@>=5.0.0 <5.4.16": ">=5.4.16",
+			"vite@>=5.0.0 <5.4.18": ">=5.4.18",
+			"cookie@<0.7.0": ">=0.7.0",
+			"@babel/runtime@<7.26.10": ">=7.26.10",
+			"@babel/helpers@<7.26.10": ">=7.26.10",
+			"vite@>=5.0.0 <=5.4.18": ">=5.4.19",
+			"vite@>=5.0.0 <5.4.17": ">=5.4.17",
+			"cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
+			"tar-fs@>=3.0.0 <3.0.7": ">=3.0.7",
+			"tar-fs@>=2.0.0 <2.1.2": ">=2.1.2",
+			"tar-fs@>=3.0.0 <3.0.9": ">=3.0.9",
+			"tar-fs@>=2.0.0 <2.1.3": ">=2.1.3",
+			"brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+			"brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+			"prismjs@<1.30.0": ">=1.30.0"
+		}
+	}
 }
